--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
         <div class="clock">
             <div id="time">
                 <div id="clockface">
-                    <img src="Static/Images/shichen-clock0001.png"
-                    class="clockfaceImage">
+                    <img id="shichenImage"
+                    src="Static/Images/shichen-clock0001.png"
+                    class="clockfaceImage" alt="Clockface">
                     <div class="digitalclock" id="modern">modern</div>
                     <div class="digitalclock" id="shichen">shichen</div>
+                    <img id="minuteHand" alt="Minute Hand" src="Static/Images/MinuteHand.png">
+                    <img id="hourHand" alt="Hour Hand" src="Static/Images/HourHand.png">
                 </div>
             </div>
         </div>
