--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
                     class="clockfaceImage" alt="Clockface">
                     <div class="digitalclock" id="modern">modern</div>
                     <div class="digitalclock" id="shichen">shichen</div>
-                    <img id="minuteHand" alt="Minute Hand" src="Static/Images/MinuteHand.png">
-                    <img id="hourHand" alt="Hour Hand" src="Static/Images/HourHand.png">
+                    <div id="hands">
+                        <img id="minuteHand" alt="Minute Hand" src="Static/Images/MinuteHand.png">
+                        <img id="hourHand" alt="Hour Hand" src="Static/Images/HourHand.png">
+                    </div>
+                </div>
+                <div class="toggles">
+                    <img id="modernToggle" alt="24/12 Hour Toggle" src="Static/Images/ModernToggle12.png">
+                    <img id="shichenToggle" alt="Pinyin/Hanzi Toggle" src="Static/Images/ShichenToggleHanzi.png">
                 </div>
             </div>
         </div>
 
     <script src="app.js"></script>
+    <script src="preferences.js"></script>
     </body>
 </html>
